<resources>
    <string name="app_name">Smart Note</string>
    <string name="nav_drawer_books">Books</string>
    <string name="nav_drawer_qrscanner">QRScanner</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_open_source_libraries">Open Source Libraries</string>
    <string name="nav_drawer_contact">Contact</string>
    <string name="drive_backup_frequency">Back up to google drive</string>
    <string name="display_image">Display_Image</string>
    <string name="sign_out">Sign Out</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="none">None</string>
    <string name="upload_now">Upload now</string>
    <string name="add_book">Add Book</string>
    <string name="create_pdf">Create PDF</string>
    <string name="add_pages">Add Pages</string>
    <string name="welcome">Welcome!</string>
    <string name="nosignin">Not signed in</string>
    <string name="about">About</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="recents">Recents</string>
    <string name="sign_in_to_backup_your_files">Sign In to backup your files</string>
    <string name="add_books_to_get_started_with_smartnote">Add books to get started with SmartNote!</string>
    <string name="book">Book</string>
    <string name="subject_one">Subject One</string>
    <string name="subject_two">Subject Two</string>
    <string name="subject_three">Subject Three</string>
    <string name="subject_four">Subject Four</string>
    <string name="subject_five">Subject Five</string>
    <string name="contact">For support, contact delta@nitt.edu</string>
    <string name="open_source_libraries_heading">SmartNote Open Source Libraries</string>
    <string name="open_source_libraries_intro">
        THE FOLLOWING SETS FORTH ATTRIBUTION NOTICES FOR THIRD PARTY SOFTWARE THAT MAY BE CONTAINED IN THIS APPLICATION.
    </string>
</resources>